# ViettelTest

./: .gitignore  CMakeLists.txt  README.md  common.h  gNodeB.c  userEquipment.c
include/: AMF.h  common.h  gNodeB.h  userEquipment.h
include/amf/: AMF.h
include/config/: common.h
include/gnodeb/: gNodeB.h
include/ue/: userEquipment.h
include/worker/: worker.h
src/: AMF.c  gNodeB.c  userEquipment.c
src/amf/: AMF.c  main.c
src/gnodeb/: gNodeB.c  main.c
src/ue/: main.c  userEquipment.c
src/worker/: worker.c
